--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1300,27 +1300,6 @@ html {
   justify-content: center;
 }
 
-.badge {
-  display: inline-flex;
-  height: 1.5rem;
-  align-items: center;
-  justify-content: center;
-  gap: 0.375rem;
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-  text-align: center;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  font-weight: 400;
-  width: -moz-fit-content;
-  width: fit-content;
-  border-radius: var(--rounded-btn, 0.375rem);
-  --tw-bg-opacity: 1;
-  background-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-bg-opacity, 1)));
-  --tw-text-opacity: 1;
-  color: var(--fallback-bc,oklch(var(--bc)/var(--tw-text-opacity, 1)));
-}
-
 .btn {
   display: inline-flex;
   height: 2.375rem;
@@ -2238,24 +2217,6 @@ select.is-invalid + .advance-select-toggle:focus,
   border-width: 2px;
   --tw-border-opacity: 1;
   border-color: var(--fallback-b1,oklch(var(--b1)/var(--tw-border-opacity, 1)));
-}
-
-.badge-primary {
-  --tw-bg-opacity: 1;
-  background-color: var(--fallback-p,oklch(var(--p)/var(--tw-bg-opacity, 1)));
-  --tw-text-opacity: 1;
-  color: var(--fallback-pc,oklch(var(--pc)/var(--tw-text-opacity, 1)));
-}
-
-.badge-soft.badge-primary {
-  background-color: var(--fallback-p,oklch(var(--p)/0.2));
-  --tw-text-opacity: 1;
-  color: var(--fallback-p,oklch(var(--p)/var(--tw-text-opacity, 1)));
-}
-
-.badge-outline.badge-primary {
-  --tw-text-opacity: 1;
-  color: var(--fallback-p,oklch(var(--p)/var(--tw-text-opacity, 1)));
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -5238,14 +5199,6 @@ textarea:focus-visible {
   display: block;
 }
 
-.badge-sm {
-  height: 1.25rem;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .btn-sm {
   height: 1.875rem;
   min-height: 1.875rem;
@@ -5570,11 +5523,6 @@ textarea:focus-visible {
   margin-right: auto;
 }
 
-.my-6 {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
 .mb-1 {
   margin-bottom: 0.25rem;
 }
@@ -5619,10 +5567,6 @@ textarea:focus-visible {
   margin-inline-start: 0.5rem;
 }
 
-.ms-5 {
-  margin-inline-start: 1.25rem;
-}
-
 .ms-auto {
   margin-inline-start: auto;
 }
@@ -5653,6 +5597,10 @@ textarea:focus-visible {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .block {
@@ -5730,10 +5678,6 @@ textarea:focus-visible {
 
 .h-8 {
   height: 2rem;
-}
-
-.h-80 {
-  height: 20rem;
 }
 
 .h-9 {
@@ -5955,6 +5899,14 @@ textarea:focus-visible {
   justify-content: space-between;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-4 {
   gap: 1rem;
 }
@@ -5965,14 +5917,6 @@ textarea:focus-visible {
 
 .gap-8 {
   gap: 2rem;
-}
-
-.gap-1 {
-  gap: 0.25rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -6078,6 +6022,10 @@ textarea:focus-visible {
   border-top-width: 1px;
 }
 
+.border-base-content\/25 {
+  border-color: var(--fallback-bc,oklch(var(--bc)/0.25));
+}
+
 .border-blue-600 {
   --tw-border-opacity: 1;
   border-color: rgb(28 100 242 / var(--tw-border-opacity, 1));
@@ -6103,13 +6051,14 @@ textarea:focus-visible {
   border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
 }
 
-.border-base-content\/25 {
-  border-color: var(--fallback-bc,oklch(var(--bc)/0.25));
-}
-
 .\!bg-gray-50 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1)) !important;
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
 .bg-blue-100 {
@@ -6166,11 +6115,6 @@ textarea:focus-visible {
   background-color: rgb(17 24 39 / 0.5);
 }
 
-.bg-slate-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity, 1));
-}
-
 .bg-transparent {
   background-color: transparent;
 }
@@ -6182,19 +6126,6 @@ textarea:focus-visible {
 
 .bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
-}
-
-.bg-base-200\/60 {
-  background-color: var(--fallback-b2,oklch(var(--b2)/0.6));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
-}
-
-.bg-base-300\/60 {
-  background-color: var(--fallback-b3,oklch(var(--b3)/0.6));
 }
 
 .bg-gradient-to-r {
@@ -6224,6 +6155,10 @@ textarea:focus-visible {
   padding: 0.375rem;
 }
 
+.p-10 {
+  padding: 2.5rem;
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -6242,10 +6177,6 @@ textarea:focus-visible {
 
 .p-6 {
   padding: 1.5rem;
-}
-
-.p-10 {
-  padding: 2.5rem;
 }
 
 .px-0 {
@@ -6316,10 +6247,6 @@ textarea:focus-visible {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.pb-5 {
-  padding-bottom: 1.25rem;
 }
 
 .pl-10 {
@@ -6433,6 +6360,11 @@ textarea:focus-visible {
   letter-spacing: -0.025em;
 }
 
+.text-base-content {
+  --tw-text-opacity: 1;
+  color: var(--fallback-bc,oklch(var(--bc)/var(--tw-text-opacity, 1)));
+}
+
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(63 131 248 / var(--tw-text-opacity, 1));
@@ -6481,11 +6413,6 @@ textarea:focus-visible {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-base-content {
-  --tw-text-opacity: 1;
-  color: var(--fallback-bc,oklch(var(--bc)/var(--tw-text-opacity, 1)));
 }
 
 .opacity-0 {
@@ -6914,11 +6841,6 @@ textarea:focus-visible {
 }
 
 @media (min-width: 640px) {
-  .sm\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   .sm\:ml-20 {
     margin-left: 5rem;
   }
@@ -6947,18 +6869,6 @@ textarea:focus-visible {
     flex-wrap: nowrap;
   }
 
-  .sm\:items-center {
-    align-items: center;
-  }
-
-  .sm\:justify-center {
-    justify-content: center;
-  }
-
-  .sm\:justify-between {
-    justify-content: space-between;
-  }
-
   .sm\:rounded-none {
     border-radius: 0px;
   }
@@ -6985,10 +6895,6 @@ textarea:focus-visible {
   .sm\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
-  }
-
-  .sm\:text-center {
-    text-align: center;
   }
 
   .sm\:text-xl {
@@ -7102,11 +7008,6 @@ textarea:focus-visible {
 }
 
 @media (min-width: 1024px) {
-  .lg\:my-8 {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-  }
-
   .lg\:mb-16 {
     margin-bottom: 4rem;
   }
